--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+TweetsData/*
+Data/*
+Scripts/*
+share/*
+Lib/*
+etc*
+*.png
+*.csv
+pyvenv.cfg
